--- a/myblog/posts/sr/med-dg/index.qmd
+++ b/myblog/posts/sr/med-dg/index.qmd
@@ -18,6 +18,7 @@ categories: [medicina, zaključivanje, srpski]
 image: "think.png"
 mermaid: 
   theme: forest
+engine: knitr
 ---
 
 ```{css, echo = FALSE}
