--- a/myblog/posts/sr/studije/references.bib
+++ b/myblog/posts/sr/studije/references.bib
@@ -1,7 +1,7 @@
 @online{gruborcausal2023,
-  author = {N. Grubor, Nikola},
+  author = {Grubor, Nikola},
   title = {Kauzalno zaključivanje je moguće iz opservacionih studija},
-  date = {2023-08-07},
+  year = {2023},
   url = {https://nikola-grubor.github.io/myblog/posts/sr/kauzalno-zakljucivanje},
   langid = {sr-Latn}
 }
@@ -27,6 +27,32 @@
   publisher = {LWW},
   address = {Philadelphia},
   isbn = {978-1-60831-804-9},
+  langid = {english}
+}
+
+@article{CohortStudy1998,
+  title = {Evolution of the {{Cohort Study}}},
+  author = {Samet, Jonathan M. and Mu{\~n}oz, Alvaro},
+  year = {1998},
+  month = jan,
+  journal = {Epidemiologic Reviews},
+  volume = {20},
+  number = {1},
+  pages = {1--14},
+  issn = {0193-936X},
+  doi = {10.1093/oxfordjournals.epirev.a017964},
+  urldate = {2024-05-08}}
+}
+
+@book{StudiesMedical2005,
+  title = {The {{Design}} of {{Studies}} for {{Medical Research}}},
+  author = {Machin, David and Campbell, Michael J.},
+  year = {2005},
+  month = apr,
+  edition = {1st edition},
+  publisher = {John Wiley \& Sons Inc},
+  address = {Chichester},
+  isbn = {978-0-470-84495-3},
   langid = {english}
 }
 
